--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,8 @@
   top: 0;
   z-index: 1000;
   padding: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .navbar-content {
@@ -12,6 +14,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
+  width: 100%;
+  max-width: 100%;
 }
 
 .navbar-brand {
